# info2

./: CMakeLists.txt  library  library.c  readme.md
dynamic_programming/: AB_MatrixChainMultiplication.c  CoinChangeProblem.c  Fibunacci.c  LongestCommonSubstring.c  MatrixChainMultiplication.c
exercises/: MasterTheoremExample.c  ex1.c  ex10.c  ex11.c  ex11_biggest_plus.c  ex11_palindrome.c  ex2.c  ex2_sol.c  ex3.c  ex4.c  ex5.c  ex5_qs.c  ex6.c  ex6_2.c  ex6_linked_list.c  ex7.c  ex7_queue_linkedlist.c  ex7_queues_to_stacks.c  ex7_stack_linkedlist.c  ex7_stacks_to_queues.c  ex8.c  ex_7_reverseEven.c  matrixExam.c
graphs/: BFS.c  DFS.c  DFS_Cycles.c  PrimMinimumSpanningTree.c
recursions/: ArrayReductionRecursion.c  FactorialRecursion.c  HilbertRecursion.c  OddEvenRecursion.c  RecursiveAlgo.cpp  RulerRecursion.c  SierpinskiCurveRecursion.c  SierpinskiRecursion.c
searching/: BinarySearchTree.c
sorting/: DoublePivotQuickSort.c  InsertionSort.c  QS.c  QuickSort.c  quickie.c
structures/: BinaryTree.c  CircularQueue.c  HashMaps.c  LinkedList.c  PassingArrayInFunctions.c  Pointers.c  PrimeNumbers.c  QueueLists.c  QueuesArray.c  RedBlackTree.c  StacksArray.c  StacksLists.c  Structures.c  StructuresWithPointers.c
week0/: BubbleSort.c  LinearSearch.c  SelectionSort.c  SierpinskiRecursion.c  ex0.c  ex1.c
week1/: FrequencyCountMethod.c  Gcd.c  HanoiRecursion.c  ex2.c
week2/: ex3_21.c
week3/: MergeSort.c  ex4.c  ex4_2.c
week4/: Heap.c  HeapSort.c
